[tool.poetry]
name = "mirar"
version = "0.9.1"
description = "Modular Image Reduction and Analysis Resource (MIRAR)"
authors = ["Robert Stein <rdstein@caltech.edu>", "Viraj Karambelkar <viraj@astro.caltech.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/winter-telescope/mirar"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
astroplan = "^0.8"
astropy = {extras = ["all"], version = "^5.3"}
astroquery = "^0.4.6"
avro-python3 = "~1.10.1"
coveralls = {extras = ["toml"], version = "^3.3.1"}
confluent-kafka = "^2.1.1"
docker = "^6.1.3"
ephem = "^4.1.3"
fastavro = "^1.7.4"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mocpy = "^0.12.0"
lacosmic = "^1.0.0"
numpy = ">=1.24.3,<1.26.0"
pandas = "^2.0.2"
penquins = "^2.3.1"
photutils = "^1.8.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pydl = {version = "^1.0.0rc1", allow-prereleases = true}
pyFFTW = "^0.13.1"
setuptools = ">=67.8,<69.0"
watchdog = "^3.0.0"
wget = "^3.2"
toml = "^0.10.2"
sphinx-mdinclude = "^0.5.3"
black = "^23.1.0"
pre-commit = "^3.3.2"
isort = {extras = ["pyproject"], version = "^5.12.0"}
pylint = "^2.17.1"
mypy = "^1.3"
types-requests = "^2.31.0.1"
types-toml = "^0.10.8.6"
pandas-stubs = "^2.0.1.230501"
autopep8 = "^2.0.2"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.8"
pylint-pydantic = "^0.1.6"
astrosurveyutils = "^0.0.1"
wintertoo = "^0.3.9"
urllib3 = "^1.26.16"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[tool.coverage.run]
source = ["mirar"]
concurrency = ["thread"]
omit = ["mirar/__main__.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise KeyError",
    "except KeyError",
    "raise ValueError",
    "except JSONDecodeError:",
    "raise requests.exceptions.RequestException",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    'if __name__ == "__main__":',
    "err =",
    "logger.error",
    "raise"
    ]
ignore_errors = true

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
load-plugins = "pylint_pydantic"

[tool.pylint.format]
max-line-length = "88"
disable=["logging-fstring-interpolation"]
good-names=["i", "j", "k", "ex", "Run", "_", "ra", "pa", "x", "y", "nx", "ny", "dx", "dy"]
exclude-too-few-public-methods=["pydantic.*"]
extension-pkg-whitelist=["pydantic"]

[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.2.0",]
build-backend = "poetry.core.masonry.api"
